<resources>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="app_name">axon_test</string>
    <string name="name_surname">Name Surname</string>
    <string name="cell_phone">Cell phone</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="birth">Birth</string>
    <string name="string_user_name">%1$s %2$s </string>
    <string name="string_user_age">%1$s years old </string>
</resources>