<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_toolbar"
        tools:background="@drawable/ic_user" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        tools:text="@string/name_surname" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
        tools:text="25 years old" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAge">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginVertical="4dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivMail"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/ic_email"
                    app:layout_constraintBottom_toBottomOf="@+id/tvHint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvHint" />

                <TextView
                    android:id="@+id/tvHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/email"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/ivMail"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/ivMail"
                    app:layout_constraintTop_toBottomOf="@+id/tvHint"
                    tools:text="Info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginVertical="4dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <ImageView
                    android:id="@+id/ivCellPhone"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/ic_phone"
                    app:layout_constraintBottom_toBottomOf="@+id/tvHintPhone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvHintPhone" />

                <TextView
                    android:id="@+id/tvHintPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/cell_phone"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/ivCellPhone"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvCellPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/ivCellPhone"
                    app:layout_constraintTop_toBottomOf="@+id/tvHintPhone"
                    tools:text="Info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginVertical="4dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <ImageView
                    android:id="@+id/ivSkype"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/ic_skype"
                    app:layout_constraintBottom_toBottomOf="@+id/tvHintSkype"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvHintSkype" />

                <TextView
                    android:id="@+id/tvHintSkype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/skype"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/ivSkype"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSkype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/ivSkype"
                    app:layout_constraintTop_toBottomOf="@+id/tvHintSkype"
                    tools:text="Info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginVertical="4dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                <ImageView
                    android:id="@+id/ivLocation"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/ic_location"
                    app:layout_constraintBottom_toBottomOf="@+id/tvHintLocation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvHintLocation" />

                <TextView
                    android:id="@+id/tvHintLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/location"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/ivLocation"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/ivLocation"
                    app:layout_constraintTop_toBottomOf="@+id/tvHintLocation"
                    tools:text="Info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginVertical="4dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

                <ImageView
                    android:id="@+id/ivGender"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/ic_gender"
                    app:layout_constraintBottom_toBottomOf="@+id/tvHintGender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvHintGender" />

                <TextView
                    android:id="@+id/tvHintGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/gender"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/ivGender"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/ivGender"
                    app:layout_constraintTop_toBottomOf="@+id/tvHintGender"
                    tools:text="Info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>